[package]
name = "abcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "leveldb"
path = "bins/leveldb.rs"

[dependencies]
rocksdb = "0.22.0"
rusty-leveldb = "3.0.0"
anyhow = "1.0.86"
encoding_rs = "0.8.34"
serde = { version = "1.0.203", features = ["std", "derive"] }
serde_json = "1.0.117"
